Right enforcement during create RFQ, status filter- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
@@ -67,6 +67,10 @@
                         <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.serviceCatalogId}" />
                         <h:outputText value="Service Name:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.serviceName}" />
+                        <h:outputText value="Service Description" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.serviceDescription}" />
+                        <h:outputText value="Service Type" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.serviceType}" />
                         <h:outputText value="Listed Price Per TEU:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{generateQuotationManagedBean.selectedRequest.price}" />
                         <h:outputText value="Start Date:" /><p:spacer width="20" height="20" />
