--- a/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
@@ -23,7 +23,7 @@
 
             <p:panelMenu>
                 <p:submenu label =" Manage Your Warehouse">
-                    <p:menuitem value="WMS home" url="wmsindex.xhtml" />
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                     <p:submenu label="Warehouse" >
                         <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
@@ -35,6 +35,9 @@
                     <p:submenu label="Storage Bin" >
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Stock" >
+                        <p:menuitem value="Add Stock" url="addstock.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                 </p:submenu>
             </p:panelMenu>
