--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -35,6 +35,9 @@
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                     </p:submenu>
+                    <p:submenu label="Stock" >
+                        <p:menuitem value="Add Stock" url="addstock.xhtml" style="background-color: lavender"/>
+                    </p:submenu>
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
