--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -61,7 +61,7 @@
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
