mps and buffer-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
@@ -52,40 +52,14 @@
 
         <ui:define name="right">
             <h:form>
-                
-                
-                <p:panel header="Enter Buffer If Necessary" style="margin-bottom:10px;">
+                <p:panel header="Required demand for this month" style="margin-bottom:10px;">
                     <p:panelGrid style="margin-top:20px">
-                        <p:row>
-                            <p:column>
-                                <h:outputText value="Forecasted Demand:  " />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
-                                <h:outputText value="Current Inventory Balance: " />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.currentInv}" />
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
-                                <h:outputLabel for="buffer" value="Buffer:" style="font-weight:bold" />
-                            </p:column>
-                            <p:column> 
-                                <p:inputText id="buffer" value="#{mPSResultManagedBean.buffer}" />
-                            </p:column>
-                        </p:row>
                         <p:row>
                             <p:column>
                                 <h:outputText value="Demand in Production Plan:  " />
                             </p:column>
                             <p:column>
-                                <h:outputText id="out" value="#{mPSResultManagedBean.requiredDemand}" />
+                                <h:outputText id="requiredDemand" value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                         </p:row>
                     </p:panelGrid>
@@ -117,19 +91,19 @@
                         <p:row>
                             <p:column style="font-weight: bold;" colspan="2">Monthly Demand</p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                         </p:row>
 
@@ -153,27 +127,22 @@
 
                         <p:row>
                             <p:column style="font-weight: bold;" colspan="2">MPS Weekly Demand</p:column>
-                            <p:column>600</p:column>
-                            <p:column>600</p:column>
-                            <p:column>600</p:column>
-                            <p:column>600</p:column>
-                            <p:column>600</p:column>
+                            <p:column><h:outputText value="#{mPSResultManagedBean.wk1Demand}" /></p:column>
+                            <p:column><h:outputText value="#{mPSResultManagedBean.wk2Demand}" /></p:column>
+                            <p:column><h:outputText value="#{mPSResultManagedBean.wk3Demand}" /></p:column>
+                            <p:column><h:outputText value="#{mPSResultManagedBean.wk4Demand}" /></p:column>
+                            <p:column><h:outputText value="#{mPSResultManagedBean.wk5Demand}" /></p:column>
                         </p:row>
 
                     </p:panelGrid>
+                    <p:commandButton value="Go Back"  action="#{mPSResultManagedBean.backToMPSBuffer}" />
                 </p:panel>
-
-
-
-
-
-
-
-
             </h:form>
         </ui:define>
     </ui:composition>
 
 </html>
+
+
 
 
