--- a/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
@@ -59,7 +59,7 @@
                                 <h:outputText value="Forecasted Demand:  " />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredAmt1}" />
+                                <h:outputText value="#{mPSBufferManagedBean.requiredAmt1}" />
                             </p:column>
                         </p:row>
                         <p:row>
@@ -67,7 +67,7 @@
                                 <h:outputText value="Current Inventory Balance: " />
                             </p:column>
                             <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.currentInv}" />
+                                <h:outputText value="#{mPSBufferManagedBean.currentInv}" />
                             </p:column>
                         </p:row>
                         <p:row>
@@ -75,101 +75,14 @@
                                 <h:outputLabel for="buffer" value="Enter Buffer:" style="font-weight:bold" />
                             </p:column>
                             <p:column> 
-                                <p:inputText id="buffer" value="#{mPSResultManagedBean.buffer}" />
+                                <p:inputText id="buffer" value="#{mPSBufferManagedBean.buffer}" />
 
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
-                                <h:outputText value="Demand in Production Plan:  " />
-                            </p:column>
-                            <p:column>
-                                <h:outputText id="requiredDemand" value="#{mPSResultManagedBean.requiredDemand}" />
                             </p:column>
                         </p:row>
                     </p:panelGrid>
+                    <p:commandButton value="Go Back"  action="#{mPSBufferManagedBean.backToHistory}" />
+                    <p:commandButton value="Proceed with MPS weekly demand"  action="#{mPSBufferManagedBean.proceedToMPSResult}" />
                 </p:panel>
-
-                <p:panel header="View MPS Weekly Demand" style="margin-bottom:10px;">
-                    <p:panelGrid style="margin-top:20px">
-                        <f:facet name="header">
-                            <p:row>
-                                <p:column colspan="7">MPS Weekly Demand Management</p:column>
-                            </p:row>
-                            <p:row>
-                                <p:column colspan="2" rowspan="2">Demand Management</p:column>
-                                <p:column colspan="1">Week 1</p:column>
-                                <p:column colspan="1">Week 2</p:column>
-                                <p:column colspan="1">Week 3</p:column>
-                                <p:column colspan="1">Week 4</p:column>
-                                <p:column colspan="1">Week 5</p:column>
-                            </p:row>
-                            <p:row>
-                                <p:column colspan="1"> <h:outputText value="#{mPSResultManagedBean.week1S}" /></p:column>
-                                <p:column colspan="1"><h:outputText value="#{mPSResultManagedBean.week2S}" /></p:column>
-                                <p:column colspan="1"><h:outputText value="#{mPSResultManagedBean.week3S}" /></p:column>
-                                <p:column colspan="1"><h:outputText value="#{mPSResultManagedBean.week4S}" /></p:column>
-                                <p:column colspan="1"><h:outputText value="#{mPSResultManagedBean.week5S}" /></p:column>
-                            </p:row>
-                        </f:facet>
-
-                        <p:row>
-                            <p:column style="font-weight: bold;" colspan="2">Monthly Demand</p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
-                            </p:column>
-                            <p:column>
-                                <h:outputText value="#{mPSResultManagedBean.requiredDemand}" />
-                            </p:column>
-                        </p:row>
-
-                        <p:row>
-                            <p:column style="font-weight: bold;" colspan="2">Working Days in Week</p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.week1WorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.week2WorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.week3WorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.week4WorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.week5WorkingDays}" /></p:column>
-                        </p:row>
-
-                        <p:row>
-                            <p:column style="font-weight: bold;" colspan="2">Working Days in Month</p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.totalWorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.totalWorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.totalWorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.totalWorkingDays}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.totalWorkingDays}" /></p:column>
-                        </p:row>
-
-                        <p:row>
-                            <p:column style="font-weight: bold;" colspan="2">MPS Weekly Demand</p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.wk1Demand}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.wk2Demand}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.wk3Demand}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.wk4Demand}" /></p:column>
-                            <p:column><h:outputText value="#{mPSResultManagedBean.wk5Demand}" /></p:column>
-                        </p:row>
-
-                    </p:panelGrid>
-                                        <p:commandButton value="Go Back"  action="#{mPSResultManagedBean.backToHistory}" />
-                </p:panel>
-
-
-
-
-
-
-
-
             </h:form>
         </ui:define>
     </ui:composition>
