--- a/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
@@ -136,6 +136,7 @@
 
                     </p:panelGrid>
                     <p:commandButton value="Go Back"  action="#{mPSResultManagedBean.backToMPSBuffer}" />
+                    <p:commandButton value="Proceed to view material requirement planning"  action="#{mPSResultManagedBean.proceedToMaterialReq}" />
                 </p:panel>
             </h:form>
         </ui:define>
